# src/utils/api-spec.json
@@ -9,38 +9,38 @@
     "application/json"
   ],
   "paths": {
-    "/findid": {
+    "/findbyid/{_id}": {
       "get": {
         "tags": [
-          "/findid"
+          "/findbyid"
         ],
-        "description": "아이디 찾기를 위한 API 입니다. 사용자 이름, 휴대전화번호 2개를 입력해야 합니다.",
+        "description": "사용자 정보를 가져오는 API입니다",
         "parameters": [
           {
-            "name": "nickname",
-            "in": "formData",
-            "description": "이름",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "cellphone",
-            "in": "formData",
-            "description": "휴대전화번호",
+            "name": "_id",
+            "in": "path",
+            "description": "사용자 아이디",
             "required": true,
             "type": "string"
           }
         ],
         "responses": {
           "200": {
-            "description": "[완료]아이디 목록이 조회가 정상적으로 완료되었습니다.",
+            "description": "[완료]사용자 정보를 받아왔습니다",
+            "content": {
+              "application/json": {},
+              "application/xml": {}
+            }
+          },
+          "401": {
+            "description": "[에러]인증 토큰이 유효하지 않아 사용자 정보를 받아올 수 없습니다",
             "content": {
               "application/json": {},
               "application/xml": {}
             }
           },
           "500": {
-            "description": "[에러]서버에 문제가 있어 아이디 찾기에 실패하였습니다.",
+            "description": "[에러]서버에 문제가 있어 사용자 정보를 받아오지 못했습니다",
             "content": {
               "application/json": {},
               "application/xml": {}
@@ -405,7 +405,7 @@
           "description": "User's cellphone"
         },
         "createdAt": {
-          "type": "date-time"
+          "type": "date"
         }
       }
     },
